project section update

--- a/index.html
+++ b/index.html
@@ -369,38 +369,13 @@
             </div>
 
             <div class="row portfolio-container">
-
                 <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img width="580px" class="img-fluid" src="img/meme-generator.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/neural_network.png" alt="">
                     </div>
                     <div class="portfolio-content">
-                        <h2>Meme Generator</h2>
-                        <p>A ReactJS implementation of a functional meme generator. This generates a meme using two sentences given by the user, and a random image from a local database.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/ReactJS-meme-generator" target="_blank">Check Repository!</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="html">HTML</button>
-                            <button disabled class="css">CSS</button>
-                            <button disabled class="javascript">JavaScript</button>
-                            <button disabled class="reactjs">ReactJS</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
-
-                <div class=" portfolio-item applications">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/kindle.png" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Kindle</h2>
-                        <p>A Python backend implementation of a Kindle device.</p>
+                        <h2>CAPTCHA Recognition Model</h2>
+                        <p>A model developed using PyTorch that is able to solve text-based CAPTCHA; model was trained through supervised learning.</p>
                         <div class="more-info">
                             <button class="info-btn"><a href="https://github.com/luizfboss/KindleBackend" target="_blank">Check Repository!</a></button>
                         </div>
@@ -409,6 +384,30 @@
 
                         <div class="lang-tags">
                             <button class="python">Python</button>
+                            <button class="html">PyTorch</button>
+                            <button class="deep-learning">Deep Learning</button>
+                        </div>
+                    </div>
+                </div> 
+
+                <br>
+
+                <div class=" portfolio-item web-pages">
+                    <div class="portfolio-img-container">
+                        <img width="600px" class="img-fluid" src="img/chatbot.png" alt="">
+                    </div>
+                    <div class="portfolio-content">
+                        <h2>AI ChatBot Application</h2>
+                        <p>A a neural network that is able to answer questions provided by users, based on pattern recognition acquired
+                            through training from static data.</p>
+                        <div class="more-info">
+                            <button class="info-btn"><a href="https://github.com/luizfboss/python-chatbot" target="_blank">Check Repository!</a></button>
+                        </div>
+
+                        <br>
+
+                        <div class="lang-tags">
+                            <button disabled class="python">Python</button>
                         </div>
                     </div>
                 </div> 
@@ -435,48 +434,21 @@
                     </div>  
                 </div> 
 
-                <br>
-
                 <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/web-scraper.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/kindle.png" alt="">
                     </div>
                     <div class="portfolio-content">
-                        <h2>Web Scraper</h2>
-                        <p>A Web Scraper that gathers information from the internet, based on parameters.</p>
+                        <h2>Kindle</h2>
+                        <p>A Python backend implementation of a Kindle device.</p>
                         <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/js-web-scraper" target="_blank">Check Repository!</a></button>
+                            <button class="info-btn"><a href="https://github.com/luizfboss/KindleBackend" target="_blank">Check Repository!</a></button>
                         </div>
 
                         <br>
 
                         <div class="lang-tags">
-                            <button disabled class="javascript">JavaScript</button>
-                            <button disabled class="json">JSON</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
-                
-                <div class=" portfolio-item web-pages">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/spotify.jpg" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Spotify Clone</h2>
-                        <p>A Bootstrap implementation of a fully responsive Spotify Web Page clone.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/spotify" target="_blank">Check Repository!</a></button>
-                            <button class="info-btn"><a href="https://luizfboss.github.io/spotify/" target="_blank">View Page</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="html">HTML</button>
-                            <button disabled class="css">CSS</button>
-                            <button disabled class="bootstrap">Bootstrap</button>
+                            <button class="python">Python</button>
                         </div>
                     </div>
                 </div> 
@@ -528,49 +500,6 @@
 
                 <br>
 
-                <div class=" portfolio-item applications">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/alarm_clock.webp" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Alarm Clock</h2>
-                        <p>A C++ implementation of a functional alarm clock. Features such as AM/PM, Snooze Button, and alarm "sounds" have been added to this project.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/cpp_alarm_clock" target="_blank">Check Repository!</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button class="cplusplus">C++</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
-
-                <div class=" portfolio-item game">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/mosquitoe.png" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Mosquito Catcher</h2>
-                        <p>A JavaScript implementation of a mini game that randomly generates mosquitoes around the screen, and the player has to catch them as fast as possible in order to score.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/Mosquitoes" target="_blank">Check Repository!</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="html">HTML</button>
-                            <button disabled class="css">CSS</button>
-                            <button disabled class="javascript">JavaScript</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
 
             </div>
         </div>
