New changes to branch

--- a/index.html
+++ b/index.html
@@ -126,58 +126,42 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Bachelor's Degree</h5>
-                            <p class="mb-2"><strong>Illinois Wesleyan University</strong> | <small>2022 - Present</small></p>
-                        </div>
+                            <h5 class="font-weight-bold mb-1">Bachelor's Degree - Illinois Wesleyan University</h5>
 
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">High School</h5>
-                            <p class="mb-2"><strong>Colegio Singular - Brazil</strong> | <small>2019 - 2021</small></p>
+                            <p class="mb-2"><strong>Computer Science & Data Science</strong></p>
+                            <p>Cumulative GPA: 3.73 | Dean's List: 2022 - Present</p>
                         </div>
                     </div>
 
 
 
 
-                    <h3 class="mb-4">Experience</h3>
+                    <h3 class="mb-4">Professional Experience</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                            <p class="mb-2"><strong>Freelancer - 2022</strong></p>
-                            <p>Developed websites for local businesses, increasing brand exposure and improving
-                            revenue.
+                            <h5 class="font-weight-bold mb-1">Titan Study Tables - Illinois Wesleyan Athletics</h5>
+                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
+                            <p>Developed a full stack application that allows student-athletes to track their study time at study tables. The application gathers and presents this data in weekly reports to student-athletes, coaches, and athletic directors, as a way to keep track of student-athletes' academic progress.
                             </p>
                         </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Coding Mentor</h5>
-                            <p class="mb-2"><strong>Grow&Share - 2022</strong></p>
-                            <p>In charge of teaching coding skills to high school students whose school does not offer
-                                coding classes.</p>
+                            <h5 class="font-weight-bold mb-1">Jibi - The Comic Book Review Platform</h5>
+                            <p class="mb-2"><strong>Full Stack Development - 2024</strong></p>
+                            <p>Designed a social media application for comic book enthusiasts to upload reviews, ratings, and photos of comic books. Duties include impriving the user experience and interface. Application in progress.</p>
                         </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Student Manager</h5>
-                            <p class="mb-2"><strong>Sodexo - Present</strong></p>
-                            <p>Prepare and cook food ensuring the highest quality service and experience for customers
-                                (students and faculty).</p>
-                        </div>
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Esports Athlete - League of Legends</h5>
-                            <p class="mb-2"><strong>Illinois Wesleyan University - Present</strong></p>
-                            <p>Member of an Esports Organization, responsible for creatively create tatics for team, problem solving in cooperation between teammates, and analyzing problems.</p>
+                            <h5 class="font-weight-bold mb-1">IT Student Associate - IWU Information Technology</h5>
+                            <p class="mb-2"><strong>Information Technology - 2024</strong></p>
+                            <p>Troubleshoot and investigate IT-related issues for students, faculty, and staff; responsible for handling operational systems, computer hardware, and third-party tools.</p>
                         </div>
                         
                     </div>
