Updated new resume

--- a/index.html
+++ b/index.html
@@ -172,21 +172,21 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Mastering Web Development</h5>
-                            <p class="mb-2"><strong>Faus</strong> | <small>2022 - 2023</small></p>
+                            <h5 class="font-weight-bold mb-1">Full Stack Development Bootcamp</h5>
+                            <p class="mb-2"><strong>Faus</strong> | <small>2023</small></p>
                         </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Introduction to ReactJS</h5>
-                            <p class="mb-2"><strong>FreeCodeCamp</strong> | <small>2022</small></p>
+                            <h5 class="font-weight-bold mb-1">Web Development with ReactJS</h5>
+                            <p class="mb-2"><strong>Google</strong> | <small>2021</small></p>
                         </div>
 
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Introduction to Quantum Computing</h5>
+                            <h5 class="font-weight-bold mb-1">Quantum Computing Research and Development</h5>
                             <p class="mb-2"><strong>IBM & QubitxQubit</strong> | <small>2021 - 2022</small></p>
                         </div>
 
@@ -194,8 +194,8 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Python - From Basic to Advanced</h5>
-                            <p class="mb-2"><strong>Geek University</strong> | <small>2021 - 2022</small></p>
+                            <h5 class="font-weight-bold mb-1">Advanced Python</h5>
+                            <p class="mb-2"><strong>Geek University</strong> | <small>2022</small></p>
                         </div>
 
 
@@ -209,21 +209,11 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Introduction to JavaScript</h5>
-                            <p class="mb-2"><strong>Google & Curso em Video</strong> | <small>2021</small></p>
-                        </div>
-
-
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Digital Art, Design, and Animation Course</h5>
                             <p class="mb-2"><strong>School of Art, Games and Animation (SAGA)</strong> |
                                 <small>2019-2021</small>
                             </p>
                         </div>
-
-
                     </div>
                 </div>
             </div>
@@ -244,7 +234,6 @@
             </div>
 
             <div class="row align-items-center">
-
                 <div class="col-md-5 m-auto">
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
@@ -284,15 +273,10 @@
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                 aria-valuemax="100"></div>
                         </div>
-                    </div>
-
-                    
-                    
+                    </div>                    
                 </div>
+
                 <div class="col-md-5">
-
-
-
                     <div class="skill mb-4">
 
                         <div class="skill mb-4">
