New changes and new resume

--- a/index.html
+++ b/index.html
@@ -343,13 +343,35 @@
             <div class="row portfolio-container">
                 <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
+                        <img width="600px" class="img-fluid" src="img/IWU-logo.png" alt="">
+                    </div>
+                    <div class="portfolio-content">
+                        <h2>Titan Study Tables UI</h2>
+                        <p>Developed the user interface of the Titan Study Tables app to help students track and manage study hours. Designed a user-friendly layout with seamless check-ins, real-time progress tracking, and responsive accessibility.</p>
+                        <div class="more-info">
+                            <button class="info-btn"><a href="https://www.figma.com/design/rUfx8jXuq2AWExGpPrNwdM/Titan-Study-Tables?t=sZEc8mXLiGOsKtjS-1" target="_blank">Check Figma File!</a></button>
+                        </div>
+
+                        <br>
+
+                        <div class="lang-tags">
+                            <button class="bootstrap">UI/UX Dev.</button>
+                            <button class="full-stack">Full Stack</button>
+                        </div>
+                    </div>
+                </div> 
+
+                <br>
+
+                <div class=" portfolio-item applications">
+                    <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/neural_network.png" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>CAPTCHA Recognition Model</h2>
                         <p>A model developed using PyTorch that is able to solve text-based CAPTCHA; model was trained through supervised learning.</p>
                         <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/KindleBackend" target="_blank">Check Repository!</a></button>
+                            <button class="info-btn"><a href="https://github.com/luizfboss/Captcha-Recognition" target="_blank">Check Repository!</a></button>
                         </div>
 
                         <br>
@@ -444,35 +466,12 @@
                         <div class="lang-tags">
                             <button disabled class="html">HTML</button>
                             <button disabled class="css">CSS</button>
-                            <button disabled class="bootstrap">Bootstrap</button>
+                            <button disabled class="bootstrap">UI/UX Dev.</button>
                         </div>
                     </div>
                 </div> 
 
                 <br>
-
-                <div class=" portfolio-item applications">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/auto-email.jpg" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Automated Email Sender</h2>
-                        <p>A Python Project that Sends emails automatically and immediately. This project uses Pyautogui and PyperClip as the main packages, that allow the user to find the appropriate keys for the expected output.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/Automated-Email-Sending" target="_blank">Check Repository!</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="python">Python</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
-
-
             </div>
         </div>
     </div>
