Fixed IWU image

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="row portfolio-container">
                 <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/IWU-logo.png" alt="">
+                        <img width="600px" class="img-fluid" src="img/IWU-Logo.png" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Titan Study Tables UI</h2>
