Fixed a button on projects section

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
                         <div class="lang-tags">
                             <button class="bootstrap">UI/UX Dev.</button>
-                            <button class="full-stack">Full Stack</button>
+                            <button class="full-stack-btn">Full Stack</button>
                         </div>
                     </div>
                 </div> 
