--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
             <div class="row align-items-center">
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
-                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
+                    <h1 class="display-3 text-uppercase text-primary mb-2" style="
+  text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff;">
                         Luiz Bossetto</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Computer Science Major, College Student, Front-End, Computer Enthusiast</div>
+                    <div class="typed-text d-none">UI/UX Developer, Web Designer, CS Major</div>
                 </div>
             </div>
         </div>
