--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff;">
                         Luiz Bossetto</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">UI/UX Developer, Web Designer, CS Major</div>
+                    <div class="typed-text d-none">UI/UX Designer, Web Designer, Full-Stack Developer, CS Major</div>
                 </div>
             </div>
         </div>
@@ -82,8 +82,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">I'm Luiz</h3>
-                    <p>A passionate and creative Computer Science Major from Brazil, currently living in Illinois. I have been studying and learning about computer-science-related topics for three years now, and since the beginning, I've been fascinated by the world of technology. As I showcase my work in this portfolio, I aim to demonstrate my passion for computer science and highlight the projects that reflect my skills, creativity, and dedication.
-                    </p>
+                    <p>I'm a curious and creative Computer Science major from Brazil, currently based in Illinois. Over the past five years, I've been diving deep into the world of technology, exploring everything from Quantum Computing to user experience design. What started as a fascination has grown into a true passion for building thoughtful, functional, and impactful solutions. This portfolio is a reflection of that journey, showcasing the projects that have shaped my skills, challenged my creativity, and fueled my dedication to the field.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
                             <h6>Name: <span class="text-secondary">Luiz Bossetto</span></h6>
@@ -104,7 +103,7 @@
                             <h6>Email: <span class="text-secondary">luiz.fbossetto@outlook.com</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Hobbies: <span class="text-secondary">Read, Code, Travel, Play the Guitar</span></h6>
+                            <h6>Hobbies: <span class="text-secondary">Read, Code, Board Games</span></h6>
                         </div>
                     </div>
                 </div>
