Made new changes to fonts and color scheme.

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 text-center text-lg-left">
-                    <h3 class="text-white font-weight-normal mb-3">I'm</h3>
+                    <h3 class="text-white font-weight-normal mb-3 press-start-2p-regular">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="
   text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff;">
                         Luiz Bossetto</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">UI/UX Designer, Web Designer, Full-Stack Developer, CS Major</div>
+                    <div class="typed-text d-none">UI/UX Designer, Web Designer, Full-Stack Developer</div>
                 </div>
             </div>
         </div>
@@ -72,29 +72,24 @@
     <div class="container-fluid py-5" id="about">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px #DDDBDD; color: #DDDBDD;">About
+                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px #dddbdd; color: #DDDBDD; margin: 70px 0px  70px 0px;  text-align: center">About Me
                 </h1>
-                <h1 class="position-absolute text-uppercase text-primary">About Me</h1>
             </div>
-            <div class="row align-items-center">
+            <div class="row align-items-center" style="margin-top: ;">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
+                    <img class="img-fluid rounded" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">I'm Luiz</h3>
-                    <p>I'm a curious and creative Computer Science major from Brazil, currently based in Illinois. Over the past five years, I've been diving deep into the world of technology, exploring everything from Quantum Computing to user experience design. What started as a fascination has grown into a true passion for building thoughtful, functional, and impactful solutions. This portfolio is a reflection of that journey, showcasing the projects that have shaped my skills, challenged my creativity, and fueled my dedication to the field.</p>
+                    <p id="about-description">
+                        I'm a curious and creative Computer Science major from Brazil, currently based in Illinois. Over the past five years, I've been diving deep into the world of technology, exploring everything from Quantum Computing to user experience design. What started as a fascination has grown into a true passion for building thoughtful, functional, and impactful solutions. This portfolio is a reflection of that journey, showcasing the projects that have shaped my skills, challenged my creativity, and fueled my dedication to the field.
+                    </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
                             <h6>Name: <span class="text-secondary">Luiz Bossetto</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Birthday: <span class="text-secondary">30 January 2004</span></h6>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <h6>Degree: <span class="text-secondary">Bachelor's Degree (in progress)</span></h6>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <h6>Years of experience: <span class="text-secondary">4 Years (self-taught since 2020 and now in college)</span></h6>
+                            <h6>Years of experience: <span class="text-secondary">4 Years</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
                             <h6>Nationality: <span class="text-secondary">Brazilian</span></h6>
@@ -116,8 +111,7 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px; color: #DDDBDD;">Work</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
+                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px; color: #FFFFFF; text-align: center;  margin-top: 100px;">Experience</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -228,9 +222,7 @@
     <div class="container-fluid py-5" id="skill">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px #dee2e6; color: #DDDBDD;">Skills
-                </h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
+                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px; color: #FFFFFF; text-align: center;  margin-top: 100px;">Skills</h1>
             </div>
 
             <div class="row align-items-center">
