Added minor things here

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px #dddbdd; color: #DDDBDD; margin: 70px 0px  70px 0px;  text-align: center">About Me
                 </h1>
             </div>
-            <div class="row align-items-center" style="margin-top: ;">
+            <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <img class="img-fluid rounded" src="img/about.jpg" alt="">
                 </div>
