--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
     <!-- Header End -->
 
     <!-- About Start -->
-    <div class="container-fluid py-5" id="about">
+    <div class="container-fluid py-5 mb-5" id="about">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px #dddbdd; color: #DDDBDD; margin: 70px 0px  70px 0px;  text-align: center">About Me
+                <h1 class="display-3 text-uppercase text-primary mb-2" style="text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff; padding-bottom: 50px;">
+                        About me
                 </h1>
             </div>
             <div class="row align-items-center">
@@ -82,7 +83,7 @@
                 <div class="col-lg-7">
                     <h3 class="mb-4">I'm Luiz</h3>
                     <p id="about-description">
-                        I'm a curious and creative Computer Science major from Brazil, currently based in Illinois. Over the past five years, I've been diving deep into the world of technology, exploring everything from Quantum Computing to user experience design. What started as a fascination has grown into a true passion for building thoughtful, functional, and impactful solutions. This portfolio is a reflection of that journey, showcasing the projects that have shaped my skills, challenged my creativity, and fueled my dedication to the field.
+                        I'm a curious and creative Computer Science major from Brazil, currently based in Illinois. Over the past five years, I've been diving deep into the world of technology, exploring everything from Quantum Computing to user experience design. What started as a fascination has grown into a true passion for building thoughtful, functional, and impactful solutions. This portfolio showcases the projects that have shaped my skills, challenged my creativity, and fueled my dedication to the field.
                     </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
@@ -93,9 +94,6 @@
                         </div>
                         <div class="col-sm-6 py-2">
                             <h6>Nationality: <span class="text-secondary">Brazilian</span></h6>
-                        </div>
-                        <div class="col-sm-6 py-2">
-                            <h6>Email: <span class="text-secondary">luiz.fbossetto@outlook.com</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
                             <h6>Hobbies: <span class="text-secondary">Read, Code, Board Games</span></h6>
@@ -111,7 +109,9 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px; color: #FFFFFF; text-align: center;  margin-top: 100px;">Experience</h1>
+                <h1 class="display-3 text-uppercase text-primary mb-2" style="text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff; padding-bottom: 50px;">
+                        Experience
+                </h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -222,7 +222,9 @@
     <div class="container-fluid py-5" id="skill">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px; color: #FFFFFF; text-align: center;  margin-top: 100px;">Skills</h1>
+                <h1 class="display-3 text-uppercase text-primary mb-2" style="text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff; padding: 50px 0px;">
+                        Skills
+                </h1>
             </div>
 
             <div class="row align-items-center">
@@ -327,9 +329,9 @@
     <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase" style="-webkit-text-stroke: 1px #dee2e6; color: #DDDBDD;">projects
+                <h1 class="display-3 text-uppercase text-primary mb-2" style="text-shadow: 2px 2px 0 #ffffff, -2px 2px 0 #ffffff, -2px -2px 0 #ffffff, 2px -2px 0 #ffffff; padding: 50px 0px;">
+                        Projects
                 </h1>
-                <h1 class=" position-absolute text-uppercase text-primary" id="#contact-me">My Portfolio</h1>
             </div>
 
             <div class="row portfolio-container">
